<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/formulario_de_verificacion_titulo_tv"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/formulario_de_verificacion_titulo_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/departamento_de_tecnologia_subtitulo_tv"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/departamento_de_tecnologia_subtitulo_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_de_verificacion_titulo_tv" />

        <TextView
            android:id="@+id/nombre_cliente_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/nombre_de_cliente_edit_text"
            android:text="@string/nombre_de_cliente_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departamento_de_tecnologia_subtitulo_tv" />

        <EditText
            android:id="@+id/nombre_de_cliente_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_tv" />

        <TextView
            android:id="@+id/contrato_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/contrato_edit_text"
            android:text="@string/contrato_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_de_cliente_edit_text" />

        <EditText
            android:id="@+id/contrato_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrato_tv" />

        <Button
            android:id="@+id/tarifa_selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tarifa_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrato_edit_text" />

        <TextView
            android:id="@+id/tarifa_selected_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tarifa_selection_button"
            app:layout_constraintBottom_toBottomOf="@+id/tarifa_selection_button"
            app:layout_constraintStart_toEndOf="@+id/tarifa_selection_button"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/numero_de_aviso_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/numero_de_aviso_edit_text"
            android:text="@string/numero_aviso_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tarifa_selection_button" />

        <EditText
            android:id="@+id/numero_de_aviso_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero_de_aviso_tv" />

        <TextView
            android:id="@+id/direccion_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/direccion_edit_text"
            android:text="@string/direccion_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero_de_aviso_edit_text" />

        <EditText
            android:id="@+id/direccion_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direccion_tv" />

        <TextView
            android:id="@+id/serie_medidor_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/serie_medidor_edit_text"
            android:text="@string/serie_medidor_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direccion_edit_text" />

        <EditText
            android:id="@+id/serie_medidor_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serie_medidor_tv" />

        <Button
            android:id="@+id/marca_medidor_selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/marca_medidor_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serie_medidor_edit_text" />

        <TextView
            android:id="@+id/marca_medidor_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/marca_medidor_selection_button"
            app:layout_constraintBottom_toBottomOf="@+id/marca_medidor_selection_button"
            app:layout_constraintStart_toEndOf="@+id/marca_medidor_selection_button"
            android:textStyle="italic"
            android:visibility="invisible" />

        <Button
            android:id="@+id/modelo_medidor_selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/modelo_medidor_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marca_medidor_selection_button" />

        <TextView
            android:id="@+id/modelo_medidor_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/modelo_medidor_selection_button"
            app:layout_constraintBottom_toBottomOf="@+id/modelo_medidor_selection_button"
            app:layout_constraintStart_toEndOf="@+id/modelo_medidor_selection_button"
            android:textStyle="italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tipificacion_de_irregularidad_tv"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipificacion_de_irregularidad_string"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelo_medidor_selection_button" />

        <TextView
            android:id="@+id/tipificacion_externa_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipificacion_externa_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipificacion_de_irregularidad_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/irregularidad_externa_recycler_view"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipificacion_externa_tv" />

        <TextView
            android:id="@+id/tipificacion_interna_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipificacion_interna_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/irregularidad_externa_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/irregularidad_interna_recycler_view"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipificacion_interna_tv" />

        <TextView
            android:id="@+id/observaciones_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/observaciones_edit_text"
            android:text="@string/observaciones_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/irregularidad_interna_recycler_view" />

        <EditText
            android:id="@+id/observaciones_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observaciones_tv" />

        <TextView
            android:id="@+id/recomendaciones_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/recomendaciones_edit_text"
            android:text="@string/recomendaciones_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observaciones_edit_text" />

        <EditText
            android:id="@+id/recomendaciones_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recomendaciones_tv" />

        <TextView
            android:id="@+id/persona_que_atendio_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/persona_que_atendio_edit_text"
            android:text="@string/persona_que_atendio_string"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recomendaciones_edit_text" />

        <EditText
            android:id="@+id/persona_que_atendio_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/persona_que_atendio_tv" />

        <Button
            android:id="@+id/codigo_verificador_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/codigo_verificador_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/persona_que_atendio_edit_text" />

        <Button
            android:id="@+id/fecha_de_visita_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha_visita_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/persona_que_atendio_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
